# rules-engine

./: README.md  main.py  pyproject.toml  underwriting_engine.py
features/: underwriting_engine.feature
steps/: underwriting_engine_steps.py
tests/: test_underwriting_engine.py
